[metadata]
name = htcondor-autoscale-manager
version = 0.0.1

[options]
package_dir=
    =src
packages=htcondor_autoscale_manager

install_requires =
  htcondor
  flask ~= 2.0
  Flask-APScheduler ~= 1.12

[options.entry_points]
console_scripts =
    htcondor_autoscale_app = htcondor_autoscale_manager.app:entry

